--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "maptack",
-  "version": "0.2.2",
+  "name": "jquery-maptack",
+  "version": "0.2.3",
   "engines": {
     "node": ">= 0.6.0"
   },
